style: changed style for correct visible error-message

--- a/src/components/ui/editable-span/editable-text.module.scss
+++ b/src/components/ui/editable-span/editable-text.module.scss
@@ -1,7 +1,7 @@
 .changeEmail {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 55px;
   align-items: center;
 
   width: 100%;
@@ -9,6 +9,7 @@
 
 .textfield {
   width: 100%;
+  height: 36px;
 }
 
 .changeSpan {
